fixing images being cut off in mobile

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -18,10 +18,10 @@
 .entry.mobile {
   text-align: center;
   position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+//  top: 50%;
+//  -webkit-transform: translateY(-50%);
+//  -ms-transform: translateY(-50%);
+//  transform: translateY(-50%);
 }
 
 .datepicker-inline {
